fix: set hero height to 100% to correctly fit on mobile devices
Using 100vh can have unexpected results on mobile devices due to the
address bar and other UI elements that can change the viewport height.
By setting the hero height to 100%, it will correctly fit the available
space on mobile devices without the content getting behind.

--- a/src/styles.css
+++ b/src/styles.css
@@ -80,13 +80,8 @@ h6 {
   --section-spacing: 5rem;
 }
 
-html {
+html, body {
   height: 100%;
-}
-
-html,
-body {
-  min-height: 100%;
 }
 
 body {
@@ -151,7 +146,7 @@ img {
 /* Hero Section */
 
 .hero {
-  height: 100vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   position: relative;
